// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display/ListItem Children smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content"
  >
    Collapisble Children
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem Clickable play-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: pointer;"
>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content"
  >
    John Doe
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem Dense smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-dense MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemText-root MuiListItemText-dense css-mui-classname"
       data-cy="list-item-content"
  >
    John Doe
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem Icon smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemIcon-root css-mui-classname">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="AccountCircleIcon"
         data-cy="list-item-icon"
    >
      <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20">
      </path>
    </svg>
  </div>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content"
  >
    John Doe
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem IconCustom smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemIcon-root css-mui-classname">
    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mui-classname"
         focusable="false"
         aria-hidden="true"
         viewbox="0 0 24 24"
         data-testid="StyleIcon"
         data-cy="list-item-icon"
         style="height: 24px; width: 24px;"
    >
      <path d="m2.53 19.65 1.34.56v-9.03l-2.43 5.86c-.41 1.02.08 2.19 1.09 2.61m19.5-3.7L17.07 3.98c-.31-.75-1.04-1.21-1.81-1.23-.26 0-.53.04-.79.15L7.1 5.95c-.75.31-1.21 1.03-1.23 1.8-.01.27.04.54.15.8l4.96 11.97c.31.76 1.05 1.22 1.83 1.23.26 0 .52-.05.77-.15l7.36-3.05c1.02-.42 1.51-1.59 1.09-2.6M7.88 8.75c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1m-2 11c0 1.1.9 2 2 2h1.45l-3.45-8.34z">
      </path>
    </svg>
  </div>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content"
  >
    John Doe
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem IconLoading smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemIcon-root css-mui-classname">
    <span class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-mui-classname"
          style="width: 24px; height: 24px;"
    >
    </span>
  </div>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content-loading"
  >
    <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-mui-classname">
    </span>
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem Loading smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content-loading"
  >
    <span class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-mui-classname">
    </span>
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem Primary smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content"
  >
    John Doe
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;

exports[`Display/ListItem Selected smoke-test 1`] = `
<div class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters Mui-selected MuiListItemButton-root MuiListItemButton-gutters Mui-selected css-mui-classname"
     tabindex="0"
     role="button"
     data-cy="list-item"
     style="cursor: default;"
>
  <div class="MuiListItemText-root css-mui-classname"
       data-cy="list-item-content"
  >
    John Doe
  </div>
  <span class="MuiTouchRipple-root css-mui-classname">
  </span>
</div>
`;
